workload/istio-system/templates/istio-gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: homelab-wildcard-tls
      hosts:
        - "*.homelab.linhng98.com"
