workload/istio-system/templates/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: kiali-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: kiali.homelab.linhng98.com
    http:
      paths:
      - backend:
          service:
            name: kiali
            port:
              number: 20001
        path: /kiali
        pathType: Prefix
  tls:
  - hosts:
    - kiali.homelab.linhng98.com
    secretName: kiali-tls
